--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
     "react": "^17.0.1",
